<resources>
    <string name="app_name">CityGuide</string>

    <string name="logo_name">Get A Way</string>

    <string name="slogan_name">We will help you to find your way!</string>
    <string name="powered_by">Powered By Car4Future</string>

    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search.</string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by us.</string>
    <string name="forth_slide_desc">We will handle everything for you. As you have the app in your pocket.</string>

    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="education">Education</string>


    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_descriptions">All the locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View all</string>
    <string name="search_text">Search...</string>

    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="add_missing_place">ADD MISSING PLACE</string>

    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>

    <string name="car_rent">Car Rent</string>
    <string name="expand_all">EXPAND ALL</string>

    <string name="hospitals">Hospitals</string>

    <string name="sign_up">Sign Up</string>
    <string name="retailer_heading">Grow\nYour Bussiness</string>
    <string name="retailer_tag_line">We will help you to grow your bussiness using online services!</string>
    <string name="create_account">Create\nAccount</string>
    <string name="how_we_work">How We Work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="forget_password_detail">Provide your account\'s email for which you want to reset your password!</string>
    <string name="make_selection_detail">Select which contact detail should we use to reset your password?</string>
    <string name="make_selection">MAKE SELECTION</string>


    <string name="add_missing_Place">ADD MISSING PLACE</string>

    <string name="otp_code_text">CO\nDE</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter one time password sent on\n+905555555555</string>

    <string name="new_credintials_detail">Your identity has been verified! Set your new password</string>

</resources>