<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.AllCategories"
    android:background="@color/lightWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/back_pressed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_button"
                android:padding="15dp"
                android:layout_centerVertical="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/search_icon"
                android:padding="15dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Categories"
            android:textSize="36sp"
            android:fontFamily="@font/muli_black"
            android:padding="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/round_bk2"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_rent"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/muli"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:textColor="@color/black"
                    android:padding="20dp"
                    android:text="@string/expand_all" />





            </RelativeLayout>


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/categories_rent_car_icon"
                android:layout_marginTop="-40dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/food_back">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/categories_restaurant_icon"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/muli"
                    android:padding="25dp"
                    android:text="@string/restaurants"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:background="#00000000"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/white"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>



        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/round_bk3"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hospitals"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/muli"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:textColor="@color/white"
                    android:padding="20dp"
                    android:text="@string/expand_all" />





            </RelativeLayout>


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/hospital_image"
                android:layout_marginTop="-15dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/round_bk5">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/categories_shop_icon"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/muli"
                    android:padding="25dp"
                    android:text="@string/shops"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:background="#00000000"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/white"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>



        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/round_bk2"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_rent"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/muli"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:textColor="@color/black"
                    android:padding="20dp"
                    android:text="@string/expand_all" />





            </RelativeLayout>


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/categories_rent_car_icon"
                android:layout_marginTop="-40dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/food_back">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/categories_restaurant_icon"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/muli"
                    android:padding="25dp"
                    android:text="@string/restaurants"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:background="#00000000"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/white"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>



        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/round_bk3"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hospitals"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/muli"
                    android:padding="25dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:textColor="@color/white"
                    android:padding="20dp"
                    android:text="@string/expand_all" />





            </RelativeLayout>


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/hospital_image"
                android:layout_marginTop="-15dp"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00000000"
            android:layout_margin="20dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/round_bk5">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/categories_shop_icon"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/muli"
                    android:padding="25dp"
                    android:text="@string/shops"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expand_all"
                    android:background="#00000000"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/white"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>



        </androidx.cardview.widget.CardView>


        





    </LinearLayout>


</ScrollView>